--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Docker done small</title>
+        <title>10 minute Docker demo</title>
 
         <meta name="author" content="Jacques Labuschagne">
 
